Feat: no todos graphic

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@
 
 @layer base {
   h1, h2, h3, h4, h5, h6, p, a, li {
-    font-family: 'Cabin',sans-serif;
+    font-family: 'Exo 2',sans-serif;
   }
   h1 {
     @apply text-6xl mb-7;
